# ModernCppLab

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.codegraph/: daemon.pid
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  experiment.yml  feature.yml  incident.yml  refactoring.yml  research.yml  test.yml
docs/: github-mcp-workflow.md
docs/00-discussion/: .gitkeep
docs/01-architecture/: .gitkeep
docs/02-planning/: .gitkeep
docs/03-refactoring/: .gitkeep
docs/04-review/: .gitkeep
docs/05-bugfix/: .gitkeep
docs/06-knowledge/: .gitkeep  class-encapsulation.md  class-inheritance.md  class-memory-model.md  class-polymorphism.md  enum-class.md  stack-and-heap.md  std-optional.md  std-string.md
include/: ConsoleApp.h  JsonTaskStorage.h  MeasurementResult.h  MeasurementStatus.h  MeasurementTask.h  TaskRepository.h
src/: ConsoleApp.cpp  JsonTaskStorage.cpp  MeasurementResult.cpp  MeasurementStatus.cpp  MeasurementTask.cpp  TaskRepository.cpp  main.cpp
